<resources>
    <string name="app_name">FLS APP</string>

    <string name="login_text">LOGIN</string>
    <string name="register_text">REGISTER</string>
    <string name="login_reg_btn_text">Register a new Account</string>
    <string name="reg_btn_text">Create an Account</string>
    <string name="reg_login_text">Already have Account? Log in</string>

    <string name="login_btn_text">sign in</string>

    <string name="setup_full_name_hint_text">Full Name</string>
    <string name="setup_user_name_hint_text">User Name</string>
    <string name="setup_btn_name_text">Save Account Settings</string>

    <string name="email_hint">Your Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>

    <string name="action_logout_text">Logout</string>

    <string name="home">Home</string>
    <string name="dashboard">DashBoard</string>
    <string name="profile">Profile</string>
</resources>
